[package]
name = "rustflow"
version = "0.1.0"
edition = "2021"
authors = ["Paul Nikholas Lopez <nik.lopez381@gmail.com>"]
description = "A high-frequency trading engine implemented in Rust"
readme = "README.md"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Utilities
chrono = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Logging and diagnostics
log = "0.4"
env_logger = "0.10"

# Efficient containers
dashmap = "5.4"  # Concurrent HashMap
crossbeam = "0.8"  # Concurrent tools

# Performance measurement (for benchmarking)
criterion = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1.1"  # Property-based testing

[features]
benchmark = ["criterion"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = true  # Keep debug symbols for profiling

[profile.bench]
opt-level = 3
debug = true
